--- a/style.css
+++ b/style.css
@@ -168,6 +168,23 @@ html {
     justify-content: space-between;
   }
 
+  .about {
+    margin: 2rem 1rem;
+    padding: 1.5rem;
+    font-size: 0.95rem;
+    box-shadow: 0 0 10px #39ff14;
+  }
+
+  .about h2 {
+    font-size: 1.4rem;
+    text-align: center;
+  }
+
+  .about p {
+    line-height: 1.6;
+    text-align: left;
+  }
+
   .hamburger {
     display: block;
     font-size: 28px;
